# ili9486-driver

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
examples/: benchmark.rs  full.rs  hello_world.rs  output_only.rs  spi.rs  stm32f4xx_hello_world.rs
src/: color.rs  commands.rs  lib.rs
src/gpio/: gpio16.rs  gpio18.rs  gpio8.rs  mod.rs
src/io/: mod.rs  shim.rs  stm32f1xx.rs  stm32f4xx.rs
