[package]
name = "ili9486-driver"
version = "0.1.0"
authors = ["Chris Moos <chris@chrismoos.com>"]
edition = "2018"

[lib]
name = "ili9486"
path = "src/lib.rs"

[dev-dependencies]
panic-semihosting = "0.5.3"
stm32f1 = "0.10.0"
cortex-m-semihosting = "0.3.5"

[dev-dependencies.tinytga]
version = "0.3"
features = ["graphics"]

[dependencies]
embedded-graphics = "0.6"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.11"
no-std-compat = "0.4"

[dependencies.display-interface]
git = "https://github.com/chrismoos/display-interface"
branch = "rw-interface"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[profile.release]
opt-level = "s"
lto = true

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal"
features = ["rt", "stm32f103", "medium"]

[profile.dev]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"