[package]
name = "ili9486-driver"
description = "ILI9486 driver for embedded devices"
version = "0.1.0"
authors = ["Chris Moos <chris@chrismoos.com>"]
edition = "2018"
repository = "https://github.com/chrismoos/ili9486-driver"
homepage = "https://github.com/chrismoos/ili9486-driver"
license = "Apache-2.0"
readme = "README.md"

[features]
default = []
examples = ["panic-semihosting", "stm32f1", "cortex-m-semihosting", "cortex-m", "cortex-m-rt", "stm32f1xx-hal"]
stm32f1xx = []

[lib]
name = "ili9486"
path = "src/lib.rs"

[dev-dependencies]
numtoa = "0.2"

[dev-dependencies.tinytga]
version = "0.3"
features = ["graphics"]

[dependencies]
embedded-graphics = "0.6"
nb = "0.1.2"
no-std-compat = "0.4"
panic-semihosting = { version = "0.5.3", optional = true }
stm32f1 = { version = "0.10.0", optional = true }
cortex-m-semihosting = { version = "0.3.5", optional = true }
cortex-m = { version = "0.6.2", optional = true }
cortex-m-rt = { version = "0.6.11", optional = true }

[dependencies.display-interface]
git = "https://github.com/chrismoos/display-interface"
branch = "rw-interface"

[dev-dependencies.display-interface-spi]
git = "https://github.com/chrismoos/display-interface"
branch = "rw-interface"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[profile.release]
opt-level = "s"
lto = true

[dependencies.stm32f1xx-hal]
git = "https://github.com/stm32-rs/stm32f1xx-hal"
features = ["rt", "stm32f103", "medium"]
optional = true

[profile.dev]
codegen-units = 1
debug = 0
lto = true
opt-level = "z"